Fixed sidebar drawer lagging on mobile

--- a/Atmos.Web/wwwroot/css/site.css
+++ b/Atmos.Web/wwwroot/css/site.css
@@ -112,8 +112,8 @@ video {
 
 .pin-drawer {
     -webkit-appearance: none;
-    width: 17px;
-    height: 17px;
+    width: 20px;
+    height: 20px;
     position: absolute;
     bottom: 5px;
     right: 5px;
@@ -121,7 +121,6 @@ video {
     border: 1px solid var(--gray-1);
     border-radius: 8px;
     outline: none;
-
     display: none;
 }
 
@@ -138,9 +137,9 @@ video {
 /*#region Sidebar drawer */
 .drawer {
     min-width: 0;
-    max-width: 0;
+    max-width: 10rem;
 
-    flex: 1;
+    flex: 0;
     overflow-x: hidden;
 
     /* Collapse the drawer in, instead of just hiding elements. */
@@ -150,8 +149,9 @@ video {
     background-color: var(--primary-2);
 
     transition: min-width 0.35s cubic-bezier(0.16, 1, 0.3, 1),
-                max-width 0.35s cubic-bezier(0.16, 1, 0.3, 1);
-    will-change: min-width;
+                max-width 0.35s cubic-bezier(0.16, 1, 0.3, 1),
+                flex-basis 0.35s cubic-bezier(0.16, 1, 0.3, 1);
+    will-change: flex-basis;
 }
 
 .drawer-content {
@@ -181,7 +181,7 @@ h2.drawer-title {
     color: var(--primary-3);
 }
 
-@media screen and (hover: hover) {
+@media screen and (hover: hover) and (pointer: fine) {
     /* Keep the drawer open when hovering, because it can't recieve focus and closes. */
     .sidebar:hover + .drawer:not(.pinned),
     .drawer:hover:not(.pinned),
@@ -189,8 +189,7 @@ h2.drawer-title {
     .drawer.pinned,
     .drawer.expanded
     /*.drawer:focus-within,*/ {
-        min-width: 10rem;
-        max-width: 10rem;
+        flex-basis: 10rem;
     }
 
     .pin-drawer {
@@ -203,25 +202,25 @@ h2.drawer-title {
 }
 
 .drawer.expanded {
-    min-width: 10rem;
-    max-width: 10rem;
+    flex-basis: 10rem;
 }
 /*#endregion */
 
 /*#region Movies container */
 .main {
     flex: 1;
+    overflow-y: auto;
 }
 
 .movies-content {
-    height: 100%;
-    
-    overflow-y: auto;
-
+    /*height: 100%;*/
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    
+
+    background: #FFEFBA; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #FFFFFF, var(--primary-4)); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #FFFFFF, var(--primary-4)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     /* Create a new stacking context, preventing repaint on scroll. Chromium performance issue. */
     transform: translateZ(0);
 }
@@ -267,8 +266,12 @@ h2.drawer-title {
         align-items: center;
     }
 
-    *::-webkit-scrollbar {
+    /**::-webkit-scrollbar {
         width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+        display: none;
     }
 
     *::-webkit-scrollbar-thumb {
@@ -281,7 +284,7 @@ h2.drawer-title {
 
     *::-webkit-scrollbar-thumb:hover {
         background-color: var(--gray-0);
-    }
+    }*/
 }
 
 /* Mobile */
